--- a/Guilherme/JavaScript/Html/compilado/Repeticion.html
+++ b/Guilherme/JavaScript/Html/compilado/Repeticion.html
@@ -1,12 +1,38 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Repetição de Mensagem - loop while</title>
 </head>
+
 <body>
     <h1>Repetição de Mensagem</h1>
-    <label for="repeatCount"></label>
+    <label for="repeatCount">Digite um número</label>
+    <input type="number" id="repeatCount">
+    <button id="startButton">Começar</button>
+    <ul id="output"></ul>
+
+    <script>
+        const repeatCountInput = document.getElementById("repeatCount");
+        const startButton = document.getElementById("startButton");
+        const output = document.getElementById("output");
+        startButton.addEventListener("click", function () {
+            output.innerHTML = "";
+            const count = parseInt(repeatCountInput.value, 10);
+            if (!isNaN(count)) {
+
+                let i = 0;
+                while (i < count) {
+                    const listItem = document.createElement("li");
+                    listItem.textContent = "Este número é " + (i + 1);
+                    output.appendChild(listItem);
+                    i++;
+                }
+            }
+        });
+    </script>
 </body>
+
 </html>
