--- a/Guilherme/JavaScript/Html/projeto FNAF/FNAF.html
+++ b/Guilherme/JavaScript/Html/projeto FNAF/FNAF.html
@@ -1,29 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>5 Músicas</title>
-    
+    <link rel="stylesheet" href="FNAF.css">
+    <title>Document</title>
 </head>
 <body>
     <navbar id="navbar">
-        <div id="navbar-container">
-            <img src="C:\Users\guilh\OneDrive\Documentos\FNAF spotify\FNAF.jpg" alt="50px" class="logo">
-            <ul class="navbar-itens">
-                <li class="navbar-item">Premium</li>
-                <li class="navbar-item">Ajuda</li>
-                <li class="navbar-item">Baixar</li>
-                <li class="navbar-item">Inscrever-se</li>
-                <li class="navbar-item">Entrar</li>
-            </ul>
+        <div class="navbar-container">
+            <img src="Guilherme\JavaScript\Html\projeto FNAF\Fnaf Musica\logo.png" alt="" class="logo">
+        <ul class="navbar-items">
+            <li class="navbaritem">Premium</li>
+            <li class="navbaritem">Ajuda</li>
+            <li class="navbaritem">Baixar</li>
+            <li class="navbaritem">Inscreva-se</li>
+            <li class="navbaritem">Entrar</li>
+        </ul>
         </div>
     </navbar>
 
     <div id="showcase">
-        <div class="showcase-container">
-            <h2>Música para todos.</h2>
-            <p>Milhões de músicas à sua escolha. E nem precisa de cartão de crédito.</p>
+        <div class="showcase-contanier">
+            <h2>Música para todos</h2>
+            <p>Miilões de música à sua escolha. E nem precisa de cartão de crédito.</p>
             <button class="btn-primary">Obtenha o spotify Free</button>
         </div>
     </div>
