--- a/Guilherme/JavaScript/Html/projeto FNAF/FNAF.html
+++ b/Guilherme/JavaScript/Html/projeto FNAF/FNAF.html
@@ -1,31 +1,37 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>5 músicas - Spotify</title>
     <link rel="stylesheet" href="FNAF.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@200&display=swap" rel="stylesheet">
 </head>
+
 <body>
     <navbar id="navbar">
         <div class="navbar-container">
-            <img src="Guilherme\JavaScript\Html\projeto FNAF\Fnaf Musica\logo.png" alt="" class="logo">
-        <ul class="navbar-items">
-            <li class="navbaritem">Premium</li>
-            <li class="navbaritem">Ajuda</li>
-            <li class="navbaritem">Baixar</li>
-            <li class="navbaritem">Inscreva-se</li>
-            <li class="navbaritem">Entrar</li>
-        </ul>
+            <img src="Fnaf Musica/logo.png" alt="" class="logo">
+            <ul class="navbar-itens">
+                <li class="navbar-item">Premium</li>
+                <li class="navbar-item">Ajuda</li>
+                <li class="navbar-item">Baixar</li>
+                <li class="navbar-item">Inscreva-se</li>
+                <li class="navbar-item">Entrar</li>
+            </ul>
         </div>
     </navbar>
 
     <div id="showcase">
-        <div class="showcase-contanier">
-            <h2>Música para todos</h2>
-            <p>Miilões de música à sua escolha. E nem precisa de cartão de crédito.</p>
-            <button class="btn-primary">Obtenha o spotify Free</button>
+        <div class="showcase-container">
+            <h2>Música para todos.</h2>
+            <p>Milhões de músicas a sua escolha.Nem precisa de cartão de crédito</p>
+            <button class="btn-primary">Obtenha o Spotify Free</button>
         </div>
     </div>
 </body>
+
 </html>
