--- a/Guilherme/JavaScript/Html/projeto FNAF/FNAF.html
+++ b/Guilherme/JavaScript/Html/projeto FNAF/FNAF.html
@@ -32,6 +32,59 @@
             <button class="btn-primary">Obtenha o Spotify Free</button>
         </div>
     </div>
+
+    <footer id="footer">
+        <div class="footer-content">
+            <img src="Fnaf Musica/logo.png" alt="" class="logo">
+            <ul class="footer-menu">
+                <p>Empresa</p>
+                <li class="footer-menu-item">Sobre</li>
+                <li class="footer-menu-item">Empregos</li>
+                <li class="footer-menu-item">For the Record</li>
+            </ul>
+
+            <ul class="footer-menu">
+                <p>Comunidade</p>
+                <li class="footer-menu-item">Para artistas</li>
+                <li class="footer-menu-item">Desenvolvedores</li>
+                <li class="footer-menu-item">Marcas</li>
+                <li class="footer-menu-item">Investidores</li>
+                <li class="footer-menu-item">Fornecedores</li>
+            </ul>
+
+            <ul class="footer-menu">
+                <p>Links úteis</p>
+                <li class="footer-menu-item">Ajuda</li>
+                <li class="footer-menu-item">Player da Web</li>
+                <li class="footer-menu-item">Aplicativo móvel grátis</li>
+            </ul>
+
+            <div class="socials"><i class="fa-brands fa-instagram"></i></div>
+            <div class="socials"><i class="fa-brands fa-twitter"></i></div>
+            <div class="socials"><i class="fa-brands fa-facebook-f"></i></div>
+
+        </div>
+    </footer>
+    <div class="footer-info">
+        <ul class="footer-itens">
+            <li class="footer-info-item">Legal</li>
+            <li class="footer-info-item">Centro de Privacidade</li>
+            <li class="footer-info-item">Política de Privacidade</li>
+            <li class="footer-info-item">Cookies</li>
+            <li class="footer-info-item">Sobre anúncios</li>
+        </ul>
+        <div class="rights">
+            <div class="country">
+                <p>Brasil</p>
+                <img src="Fnaf Musica/brazil.png" alt="" class="brasil-flag">
+            </div>
+
+            <p>&copy; 2020 Spotify AB</p>
+        </div>
+
+    </div>
+
+    <script src="https://kit.fontawesome.com/08c1ea27ac.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
