--- a/Guilherme/Html E CSS/portifóliu/port/PortGU.html
+++ b/Guilherme/Html E CSS/portifóliu/port/PortGU.html
@@ -44,8 +44,8 @@
             <div class="Text-sobre">
                 <h2>Sobre-mim</h2>
                 <h5><span>Desenvolvedor Full-Stack</span></h5>
-                <p>Eu sou um Desenvolvedor web front-end e back-end, consigo desenvolver sites e aplicações. Tenho 17
-                    anos fiz o curso da despertar (Programação web) sou bom em solucionar problemas. </p>
+                <p>Me chamo Guilherme, tenho 16 anos, gosto de jogar vôlei e me considero uma pessoa engraçada,
+                    determinada e dedicada.</p>
             </div>
         </div>
     </section>
@@ -90,8 +90,8 @@
         <div class="qualidades-lista">
             <div class="qualidades-row">
                 <div class="qualidade">
-                    <i class="fas fa-check-circle"></i>
-                    <span>Responsável</span>
+                    <i class="fa-solid fa-clock"></i>
+                     <span>pontual</span>
                 </div>
                 <div class="qualidade">
                     <i class="fas fa-trophy"></i>
@@ -136,8 +136,3 @@
 </body>
 
 </html>
-
-
-evelin
-emily
-bianca
