--- a/Guilherme/Html E CSS/portifóliu/port/PortEm.html
+++ b/Guilherme/Html E CSS/portifóliu/port/PortEm.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="port.css">
+    <link rel="stylesheet" href="portEm.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
@@ -33,7 +33,7 @@
 
         <div class="Main">
             <h4>Ola, meu nome é</h4>
-            <h1>Emily <span>Ferreira</span></h1>
+            <h1>Emily <span>Natasha</span></h1>
             <h3>Esse é meu portfolio</h3>
         </div>
     </div>
@@ -43,10 +43,11 @@
             <img src="" id="IMGP">
             <div class="Text-sobre">
                 <h2>Sobre-mim</h2>
-                <h5><span>Desenvolvedor Full-Stack</span></h5>
-                <p>Eu sou um Desenvolvedor web front-end e back-end, consigo desenvolver sites e aplicações. Tenho 17
-                    anos fiz o curso da despertar (Programação web) sou bom em solucionar problemas. </p>
+                <h5><span>Estudante do curso de Programação Web</span></h5>
+                <p>Cursando o 1º ano do Ensino Médio. Tenho 15 anos, gosto muito
+                    de escutar música e me considero uma pessoa agitada.</p>
             </div>
+
         </div>
     </section>
 
@@ -58,28 +59,18 @@
         <div class="Caixa">
             <div class="Card">
                 <i class="fas fa-shopping-bag"></i>
+                <h5>TCA</h5>
+                <div class="Paragrafo-button">
+                    <p>Trabalho Colaborativo de Autoria, </p>
+                </div>
+            </div>
+
+            <div class="Card">
+                <i class="fas fa-shopping-bag"></i>
                 <h5>Portfolio Despertar</h5>
                 <div class="Paragrafo-button">
-                    <p>Nesse projeto eu e meu grupo ficamos responsavel de criar um portfolio para alguns membros da
-                        Despertar.</p>
-                </div>
-            </div>
-
-            <div class="Card">
-                <i class="fas fa-shopping-bag"></i>
-                <h5>Spotify FNAF</h5>
-                <div class="Paragrafo-button">
-                    <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar
-                        funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel x'</p>
-                </div>
-            </div>
-
-            <div class="Card">
-                <i class="fas fa-shopping-bag"></i>
-                <h5>Aplicações Back-End</h5>
-                <div class="Paragrafo-button">
-                    <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar
-                        funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel </p>
+                    <p>Nesse projeto eu e minha sala ficamos responsaveis por criar um portfolio para todos os alunos do
+                        PW.</p>
                 </div>
             </div>
         </div>
@@ -91,27 +82,11 @@
             <div class="qualidades-row">
                 <div class="qualidade">
                     <i class="fas fa-check-circle"></i>
-                    <span>Responsável</span>
+                    <span>Boa comunicação</span>
                 </div>
                 <div class="qualidade">
                     <i class="fas fa-trophy"></i>
-                    <span>Determinado</span>
-                </div>
-            </div>
-            <div class="qualidades-row">
-                <div class="qualidade">
-                    <i class="fas fa-lightbulb"></i>
-                    <span>Criativo</span>
-                </div>
-                <div class="qualidade">
-                    <i class="fas fa-hands-helping"></i>
-                    <span>Colaborativo</span>
-                </div>
-            </div>
-            <div class="qualidades-row">
-                <div class="qualidade">
-                    <i class="fas fa-comments"></i>
-                    <span>Comunicativo</span>
+                    <span>Apresentar em público</span>
                 </div>
             </div>
         </div>
@@ -119,11 +94,10 @@
 
     <footer id="Contatos">
         <h6>Redes Sociais</h6>
-        <p>Guilherme Ferreira Matos</p>
+        <p>Emily Natasha</p>
         <div class="Redes-sociais">
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="far fa-envelope"></i></a>
+            <a href="https://www.instagram.com/e_natashha"><i class="fab fa-instagram"></i></a>
+            <a href="mailto:emilynatasha006@gmail.com"><i class="far fa-envelope"></i></a>
         </div>
         <p class="end">CopyRight By Despertar Web</p>
     </footer>
