--- a/Guilherme/Html E CSS/portifóliu/port/PortGU.html
+++ b/Guilherme/Html E CSS/portifóliu/port/PortGU.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="port.css">
+    <link rel="stylesheet" href="portGu.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
@@ -21,7 +21,7 @@
     <div class="background" id="Inicio">
 
         <nav>
-            <h2 class="logo">Portfolio</h2>
+            <a class="logo" href="Home.html">Portfolios Despertar</a>
             <ul class="cabeçalho-link">
                 <li><a href="#Inicio">Inicio</a></li>
                 <li><a href="#SobreMim">Sobre mim</a></li>
@@ -40,12 +40,12 @@
 
     <section class="background-color-Sobre" id="SobreMim">
         <div class="main-sobre">
-            <img src="" id="IMGP">
+            <img src="ErickI.jpg" id="IMGP">
             <div class="Text-sobre">
                 <h2>Sobre-mim</h2>
-                <h5><span>Desenvolvedor Full-Stack</span></h5>
-                <p>Me chamo Guilherme, tenho 16 anos, gosto de jogar vôlei e me considero uma pessoa engraçada,
-                    determinada e dedicada.</p>
+                <h5><span>Estudante do curso de Programação Web</span></h5>
+                <p>Cursando 2° Ensino Médio. Me chamo Guilherme, tenho 16 anos, gosto de jogar vôlei e me considero uma pessoa engraçada,
+                    determinada e dedicada. </p>
             </div>
         </div>
     </section>
@@ -58,25 +58,25 @@
         <div class="Caixa">
             <div class="Card">
                 <i class="fas fa-shopping-bag"></i>
-                <h5>Portfolio Despertar</h5>
+                <h5>Parallax</h5>
                 <div class="Paragrafo-button">
-                    <p>Nesse projeto eu e meu grupo ficamos responsavel de criar um portfolio para alguns membros da
-                        Despertar.</p>
+                    <p>Nesse projeto eu e meu grupo ficamos responsavel de criar um portfolio para todos os alunos de
+                        programação web.</p>
                 </div>
             </div>
 
             <div class="Card">
                 <i class="fas fa-shopping-bag"></i>
-                <h5>Spotify FNAF</h5>
+                <h5>Projeto Portifólio Virada Despertar 2023</h5>
                 <div class="Paragrafo-button">
                     <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar
-                        funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel x'</p>
+                        funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel </p>
                 </div>
             </div>
 
             <div class="Card">
                 <i class="fas fa-shopping-bag"></i>
-                <h5>Aplicações Back-End</h5>
+                <h5>Modelo do Spotify</h5>
                 <div class="Paragrafo-button">
                     <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar
                         funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel </p>
@@ -90,8 +90,8 @@
         <div class="qualidades-lista">
             <div class="qualidades-row">
                 <div class="qualidade">
-                    <i class="fa-solid fa-clock"></i>
-                     <span>pontual</span>
+                    <i class="fas fa-check-circle"></i>
+                    <span>Pontual</span>
                 </div>
                 <div class="qualidade">
                     <i class="fas fa-trophy"></i>
@@ -122,8 +122,8 @@
         <p>Guilherme Ferreira Matos</p>
         <div class="Redes-sociais">
             <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
-            <a href="#"><i class="far fa-envelope"></i></a>
+            <a href="https://www.instagram.com/guilherme_do_matokkkk"><i class="fab fa-instagram"></i></a>
+            <a href="mailto:guilh3rmeferr3eira@gmail.com"><i class="far fa-envelope"></i></a>
         </div>
         <p class="end">CopyRight By Despertar Web</p>
     </footer>
