--- a/Guilherme/Html E CSS/portifóliu/port/portSt.html
+++ b/Guilherme/Html E CSS/portifóliu/port/portSt.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="portEv.css">
+    <link rel="stylesheet" href="portSt.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
         href="https://fonts.googleapis.com/css2?family=Josefin+Sans:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
@@ -21,7 +21,7 @@
     <div class="background" id="Inicio">
 
         <nav>
-            <h2 class="logo">Portfolio</h2>
+            <a class="logo" href="Home.html">Portfolios Despertar</a>
             <ul class="cabeçalho-link">
                 <li><a href="#Inicio">Inicio</a></li>
                 <li><a href="#SobreMim">Sobre mim</a></li>
@@ -33,19 +33,18 @@
 
         <div class="Main">
             <h4>Ola, meu nome é</h4>
-            <h1>Evelyn <span>Fernanda</span></h1>
+            <h1>Stefany <span>Araújo</span></h1>
             <h3>Esse é meu portfolio</h3>
         </div>
     </div>
 
     <section class="background-color-Sobre" id="SobreMim">
         <div class="main-sobre">
-            <img src="" id="IMGP">
+            <img src="ErickI.jpg" id="IMGP">
             <div class="Text-sobre">
                 <h2>Sobre-mim</h2>
-                <h5><span>Estudante do curso de Programador Web</span></h5>
-                <p>Cursando o 1º ano do Ensino Médio. Eu tenho 15 anos, o que eu
-                    mais gosto é jogar videogame e me considero uma pessoa alegre. </p>
+                <h5><span>Desenvolvedor Full-Stack</span></h5>
+                <p>Tenho 18 anos e sou bastante na minha e tranquila, gosto de ler, escutar música e escrever.  </p>
             </div>
         </div>
     </section>
@@ -60,17 +59,17 @@
                 <i class="fas fa-shopping-bag"></i>
                 <h5>Portfolio Despertar</h5>
                 <div class="Paragrafo-button">
-                    <p>Nesse projeto eu e meu grupo ficamos responsavel de criar um portfolio para alguns membros da
-                        Despertar.</p>
+                    <p>Nesse projeto eu e meu grupo ficamos responsavel de criar um portfolio para todos os alunos de
+                        programação web.</p>
                 </div>
             </div>
 
             <div class="Card">
                 <i class="fas fa-shopping-bag"></i>
-                <h5>Produção Musical</h5>
+                <h5>Five Night Login</h5>
                 <div class="Paragrafo-button">
                     <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar
-                        funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel x'</p>
+                        funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel </p>
                 </div>
             </div>
 
@@ -91,27 +90,27 @@
             <div class="qualidades-row">
                 <div class="qualidade">
                     <i class="fas fa-check-circle"></i>
-                    <span>Pontual</span>
+                    <span>Responsável</span>
                 </div>
                 <div class="qualidade">
                     <i class="fas fa-trophy"></i>
-                    <span>Determinada</span>
+                    <span>Determinado</span>
                 </div>
             </div>
             <div class="qualidades-row">
                 <div class="qualidade">
                     <i class="fas fa-lightbulb"></i>
-                    <span>Criativa</span>
+                    <span>Criativo</span>
                 </div>
                 <div class="qualidade">
                     <i class="fas fa-hands-helping"></i>
-                    <span>Colaborativa</span>
+                    <span>Colaborativo</span>
                 </div>
             </div>
             <div class="qualidades-row">
                 <div class="qualidade">
                     <i class="fas fa-comments"></i>
-                    <span>Comunicativa</span>
+                    <span>Comunicativo</span>
                 </div>
             </div>
         </div>
@@ -119,11 +118,11 @@
 
     <footer id="Contatos">
         <h6>Redes Sociais</h6>
-        <p>Evelyn Fernanda da Silva Coelho</p>
+        <p>Stefany Araújo da Silva</p>
         <div class="Redes-sociais">
-            <a href="#  "><i class="fab fa-linkedin-in"></i></a>
-            <a href="https://www.instagram.com/fernanda.0178"><i class="fab fa-instagram"></i></a>
-            <a href="mailto:emilynatasha006@gmail.com"><i class="far fa-envelope"></i></a>
+            <a href="#"><i class="fab fa-linkedin-in"></i></a>
+            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="mailto:Stefanysilvaaraujo27@gmail.com "><i class="far fa-envelope"></i></a>
         </div>
         <p class="end">CopyRight By Despertar Web</p>
     </footer>
@@ -132,7 +131,7 @@
     <script>
         AOS.init();
     </script>
-    <script src="port.js"></script>
+    <script src="C.js"></script>
 </body>
 
 </html>
