--- a/Guilherme/Html E CSS/portifóliu/port/PortEV.html
+++ b/Guilherme/Html E CSS/portifóliu/port/PortEV.html
@@ -66,7 +66,7 @@
             </div>
 
             <div class="Card">
-                <i class="fas fa-shopping-bag"></i>
+                <i class="fas fa-music"></i>
                 <h5>Produção Musical</h5>
                 <div class="Paragrafo-button">
                     <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar
@@ -121,7 +121,6 @@
         <h6>Redes Sociais</h6>
         <p>Evelyn Fernanda da Silva Coelho</p>
         <div class="Redes-sociais">
-            <a href="#  "><i class="fab fa-linkedin-in"></i></a>
             <a href="https://www.instagram.com/fernanda.0178"><i class="fab fa-instagram"></i></a>
             <a href="mailto:emilynatasha006@gmail.com"><i class="far fa-envelope"></i></a>
         </div>
