--- a/Guilherme/Html E CSS/portifóliu/port/portSt.html
+++ b/Guilherme/Html E CSS/portifóliu/port/portSt.html
@@ -40,11 +40,11 @@
 
     <section class="background-color-Sobre" id="SobreMim">
         <div class="main-sobre">
-            <img src="ErickI.jpg" id="IMGP">
+            <img src="https://raw.githubusercontent.com/VivyViana/fotos/main/_MG_6173.JPG" id="IMGP">
             <div class="Text-sobre">
                 <h2>Sobre-mim</h2>
-                <h5><span>Desenvolvedor Full-Stack</span></h5>
-                <p>Tenho 18 anos e sou bastante na minha e tranquila, gosto de ler, escutar música e escrever.  </p>
+                <h5><span>Estudante do curso de Programador Web</span></h5>
+                <p>cursando o 3º ano do Ensino Médio. Tenho 18 anos e sou bastante na minha e tranquila, gosto de ler, escutar música e escrever.  </p>
             </div>
         </div>
     </section>
@@ -56,8 +56,8 @@
 
         <div class="Caixa">
             <div class="Card">
-                <i class="fas fa-shopping-bag"></i>
-                <h5>Portfolio Despertar</h5>
+                <i class="fas fa-award"></i>
+                <h5>Prêmio de Melhor Poesia 2023</h5>
                 <div class="Paragrafo-button">
                     <p>Nesse projeto eu e meu grupo ficamos responsavel de criar um portfolio para todos os alunos de
                         programação web.</p>
@@ -66,7 +66,7 @@
 
             <div class="Card">
                 <i class="fas fa-shopping-bag"></i>
-                <h5>Five Night Login</h5>
+                <h5>Apresentação da Virada Despertar 2022</h5>
                 <div class="Paragrafo-button">
                     <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar
                         funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel </p>
@@ -75,7 +75,7 @@
 
             <div class="Card">
                 <i class="fas fa-shopping-bag"></i>
-                <h5>Aplicações Back-End</h5>
+                <h5>Workshop LGPD</h5>
                 <div class="Paragrafo-button">
                     <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar
                         funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel </p>
@@ -90,7 +90,7 @@
             <div class="qualidades-row">
                 <div class="qualidade">
                     <i class="fas fa-check-circle"></i>
-                    <span>Responsável</span>
+                    <span>Organizada</span>
                 </div>
                 <div class="qualidade">
                     <i class="fas fa-trophy"></i>
@@ -104,7 +104,7 @@
                 </div>
                 <div class="qualidade">
                     <i class="fas fa-hands-helping"></i>
-                    <span>Colaborativo</span>
+                    <span>Esforçada</span>
                 </div>
             </div>
             <div class="qualidades-row">
@@ -120,8 +120,7 @@
         <h6>Redes Sociais</h6>
         <p>Stefany Araújo da Silva</p>
         <div class="Redes-sociais">
-            <a href="#"><i class="fab fa-linkedin-in"></i></a>
-            <a href="#"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/stefany-ara%C3%BAjo-0aa6a2270/"><i class="fab fa-linkedin-in"></i></a>
             <a href="mailto:Stefanysilvaaraujo27@gmail.com "><i class="far fa-envelope"></i></a>
         </div>
         <p class="end">CopyRight By Despertar Web</p>
