--- a/Guilherme/Html E CSS/portifóliu/port/PortEm.html
+++ b/Guilherme/Html E CSS/portifóliu/port/PortEm.html
@@ -79,11 +79,27 @@
     <div class="me-contate" id="Qualidades">
         <h2>Qualidades:</h2>
         <div class="qualidades-lista">
-            <div class="qualidades-row">
+            <div class="qualidades-row"></div>
                 <div class="qualidade">
                     <i class="fas fa-check-circle"></i>
                     <span>Boa comunicação</span>
                 </div>
+                <div class="qualidade">
+                    <i class="fas fa-trophy"></i>
+                    <span>Apresentar em público</span>
+                </div>
+            </div>
+            <div class="qualidades-row">
+                <div class="qualidade">
+                    <i class="fas fa-trophy"></i>
+                    <span>Apresentar em público</span>
+                </div>
+                <div class="qualidade">
+                    <i class="fas fa-trophy"></i>
+                    <span>Apresentar em público</span>
+                </div>
+            </div>
+            <div class="qualidades-row">
                 <div class="qualidade">
                     <i class="fas fa-trophy"></i>
                     <span>Apresentar em público</span>
