--- a/Guilherme/Html E CSS/portifóliu/port/portSt.html
+++ b/Guilherme/Html E CSS/portifóliu/port/portSt.html
@@ -44,7 +44,8 @@
             <div class="Text-sobre">
                 <h2>Sobre-mim</h2>
                 <h5><span>Estudante do curso de Programador Web</span></h5>
-                <p>cursando o 3º ano do Ensino Médio. Tenho 18 anos e sou bastante na minha e tranquila, gosto de ler, escutar música e escrever.  </p>
+                <p>cursando o 3º ano do Ensino Médio. Tenho 18 anos e sou bastante na minha e tranquila, gosto de ler,
+                    escutar música e escrever. </p>
             </div>
         </div>
     </section>
@@ -59,8 +60,7 @@
                 <i class="fas fa-award"></i>
                 <h5>Prêmio de Melhor Poesia 2023</h5>
                 <div class="Paragrafo-button">
-                    <p>Nesse projeto eu e meu grupo ficamos responsavel de criar um portfolio para todos os alunos de
-                        programação web.</p>
+                    <p>Ganhei um concurso anual de poesia da região.</p>
                 </div>
             </div>
 
@@ -68,8 +68,8 @@
                 <i class="fas fa-shopping-bag"></i>
                 <h5>Apresentação da Virada Despertar 2022</h5>
                 <div class="Paragrafo-button">
-                    <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar
-                        funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel </p>
+                    <p>Apresentei a Virada Despertar no 1º Semestre de 2022, falando um pouco do porquê entrar na
+                        despertar e fazer o curso de Assiste de RH</p>
                 </div>
             </div>
 
@@ -77,8 +77,8 @@
                 <i class="fas fa-shopping-bag"></i>
                 <h5>Workshop LGPD</h5>
                 <div class="Paragrafo-button">
-                    <p>Muitos sites devem ser contruido com dois principais objetivos: Primeiramente , ele precisar
-                        funcionar em todos os dispositivos. Segundo, Ele precisar ser o mais rapido possivel </p>
+                    <p>Apresentei um workshop sobre a LGPD no 1º semestre de 2023 na Despertar, para a turma de
+                        Assistente Administrativo</p>
                 </div>
             </div>
         </div>
