--- a/Guilherme/Html E CSS/portifóliu/port/PortGU.html
+++ b/Guilherme/Html E CSS/portifóliu/port/PortGU.html
@@ -60,8 +60,7 @@
                 <i class="fas fa-shopping-bag"></i>
                 <h5>Parallax</h5>
                 <div class="Paragrafo-button">
-                    <p>Nesse projeto eu e meu grupo ficamos responsavel de criar um portfolio para todos os alunos de
-                        programação web.</p>
+                    <p>Nesse site eu fiz o efeito parallax, que faz com que uma imagem de fundo mude quando você  </p>
                 </div>
             </div>
 
